2001-09-08  Jakub Jelinek  <jakub@redhat.com>

	* config/tc-sparc.c (md_apply_fix3): Handle relocs against SEC_MERGE
	section symbols the same way as externs.

2001-09-07  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* config/tc-mips.c (s_mipsset): Reallow unrestricted use of .set mipsX
	pseudo-op.

2001-09-07  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* config/tc-mips.c (append_insn): Handle BFD_RELOC_16_PCREL.
	(macro_build): Use BFD_RELOC_16_PCREL_S2 only for embedded
	PIC, BFD_RELOC_16_PCREL for the rest.
	(mips_ip): Likewise.
        (md_pcrel_from): return the right offset for the differently shifted
        pcrel relocs.
	(md_apply_fix): Handle BFD_RELOC_16_PCREL.

2001-09-05  Richard Henderson  <rth@redhat.com>

	* config/tc-ia64.c (FUNC_IPLT_RELOC): New.
	(pseudo_func): Add @iplt.
	(pseudo_opcode): Add data16 and data16.ua.
	(md_begin): Set iplt pseudo.
	(ia64_cons_fix_new): Handle 16 byte iplt reloc specially.

2001-09-04  Richard Henderson  <rth@redhat.com>

	* config/tc-alpha.c (struct alpha_insn): Make sequence scalar long.
	(MACRO_LITERAL, MACRO_BASE, MACRO_BYTOFF, MACRO_JSR): Remove.
	(alpha_macros): Remove occurrences of same.
	(O_lituse_addr, O_gprel): New.
	(DUMMY_RELOC_LITUSE_*): New.
	(s_alpha_ucons, s_alpha_arch): Prototype.
	(alpha_reloc_op): Construct elements via DEF macro.
	(ALPHA_RELOC_SEQUENCE_OK): Remove.
	(struct alpha_reloc_tag): Rename from alpha_literal_tag; rename
	members to not be literal specific.
	(next_sequence_num): New.
	(md_apply_fix3): Cope with missing GPDISP_LO16.  Adjust for
	added/removed BFD relocations.
	(alpha_force_relocation, alpha_fix_adjustable): Likewise.
	(alpha_adjust_symtab_relocs): Handle GPDISP relocs as well.
	(tokenize_arguments): Parse ! relocations properly.
	(find_macro_match): Delete unused macro argument types.
	(assemble_insn): Add reloc parameter; emit that instead of the
	default as appropriate.
	(get_alpha_reloc_tag): New.  Split from ...