@@ -1,3 +1,9 @@
+2001-09-07  Richard Henderson  <rth@redhat.com>
+
+	* config/tc-alpha.c (alpha_reloc_op_tag): Replace need_seq with
+	require_seq and allow_seq.  Let !literal omit the sequence number.
+	(tokenize_arguments): Reject sequence numbers of !allow_seq.
+
 2001-09-08  Jakub Jelinek  <jakub@redhat.com>
 
 	* config/tc-sparc.c (md_apply_fix3): Handle relocs against SEC_MERGE
